deploy/kubernetes/40-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tenant-saas
  namespace: tenant-saas
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: tenant-saas
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 30302
